[metadata]
name = baldr
author = Tim Savage
author_email = tim@savage.company
summary = Odin integration to Django 
description-file = README.rst
home-page = https://github.com/python-odin/baldr
license = BSD
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Framework :: Django
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[files]
packages =
    baldr

[bdist_wheel]
universal=1

